--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-messages": "^1.5.8",
+    "angular-toastr": "^2.1.1",
     "angular-ui-router": "^0.3.1",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "font-awesome": "^4.6.3",
