--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "nodemon -e html,js,css ./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.7.3",
-    "nodemon": "^1.11.0",
     "run-sequence": "^1.2.2"
   },
   "dependencies": {
@@ -32,6 +31,7 @@
     "jquery": "^3.1.1",
     "node-sass-middleware": "^0.9.8",
     "nodemailer": "^2.6.4",
+    "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.3.0"
   }
